--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "mongoose": "^5.8.3"
+    "mongoose": "^5.8.3",
+    "@babel/core": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
+    "express": "^4.17.1",
+    "fs": "0.0.1-security",
+    "gulp": "^4.0.2",
+    "gulp-babel": "^8.0.0-beta.2",
+    "multer": "^1.4.2"
   }
 }
