--- a/package.json
+++ b/package.json
@@ -8,21 +8,12 @@
   },
   "author": "Emma Norgren",
   "license": "ISC",
-  "devDependencies": {
-    "@babel/core": "^7.7.7",
-    "@babel/preset-env": "^7.7.7",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
-    "gulp": "^4.0.2",
-    "gulp-babel": "^8.0.0-beta.2",
-    "multer": "^1.4.2"
-  },
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "*",
     "mongoose": "^5.8.3",
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
-    "express": "^4.17.1",
+    "express": "*",
     "fs": "0.0.1-security",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0-beta.2",
